# paladin-dev-env

./: .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  flattenrs-in4me-2024-06-18_15-54-13.md
.github/workflows/: ci.yml
docker/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docker/conf/: redis.conf
docker/redis/: Dockerfile
docker/testserver/: Dockerfile
docs/: USER_SYSTEM_COMPLETION.md  user_rest_api_usage.md
docs/Design/: Design_and_Architecture.md  minio-file-repository-setup.md  redis-queue-adapter-setup.md
scripts/: run_integration_tests.sh
src/: api_integrator.rs  api_server.rs  cli.rs  config.rs  configuration.rs  data.rs  error.rs  lib.rs  llm_analyzer.rs  llm_config.rs  main.rs  router.rs  rss_fetcher.rs  web_scraper.rs
src/adapters/primary/: content_aggregator.rs  http_content_deliverer.rs  http_content_fetcher.rs  llm_content_analyzer.rs  mod.rs  queue.rs
src/adapters/secondary/: external_api_fetcher.rs  file_source_repository.rs  mod.rs  sql_content_repository.rs
src/aggregator/: mod.rs  summarizer.rs
src/analyzer/: llm_analyzer.rs  llm_config.rs  mod.rs  simple_filter.rs
src/application/: mod.rs
src/application/logs/: access_log.rs  error_log.rs  mod.rs  system_log.rs
src/application/notifications/: email_notifications.rs
src/application/port/input/: content_analyzer.rs  content_nlp_analyzer.rs  data_analyzer.rs  fetch_content.rs  fetch_content_list.rs  mod.rs
src/application/port/output/: deliver_content.rs  mod.rs
src/application/ports/input/: content_input_port.rs  llm_port.rs  ml_port.rs  mod.rs  nlp_port.rs  rpc_port.rs
src/application/ports/output/: content_delivery_port.rs  file_storage_port.rs  llm_port.rs  log_port.rs  logging_port.rs  mod.rs  notification_port.rs  notification_publisher_port.rs  queue_port.rs
src/application/service/: content_aggregator.rs  content_filter.rs  content_llm_analyzer.rs  content_summarizer.rs  mod.rs  notifier.rs  queue.rs  scheduler.rs
src/application/storage/: file_store.rs  key_store.rs  key_value_store.rs  mod.rs  nosql_store.rs  sql_store.rs  user_store.rs
src/application/use_cases/: aggregate_content.rs  analyze_content.rs  fetch_content.rs  mod.rs
src/application/use_cases/analysis/: llm_analysis_service.rs  mod.rs
src/application/use_cases/content/: content_aggregator_service.rs  content_analysis_service.rs  content_delivery_service.rs  content_fetching_service.rs  content_filtering_service.rs  content_ingestion_service.rs  content_llm_analyzer.rs  (+5 more)
src/cli/: mod.rs  user_commands.rs
src/config/: application_settings.rs  mod.rs  user_config.rs
src/config/setup/: mod.rs  service_runner.rs
src/core/: .ignore  mod.rs
src/core/base/: mod.rs
src/core/platform/: README.md  mod.rs
src/delivery/: api_server.rs  mod.rs  router.rs
src/domain/entities/: content.rs  content_item.rs  content_list.rs  mod.rs  normalized_data.rs  notification.rs  source.rs  source_config.rs  user_preferences.rs
src/domain/services/: content_aggregation_service.rs  content_analysis_service.rs  content_delivery_service.rs  content_fetching_service.rs  content_filter_service.rs  content_summarizing_service.rs  mod.rs  notification_service.rs
src/fetcher/: api_fetcher.rs  mod.rs  rss_fetcher.rs  scraper.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/external_apis/: external_api_fetcher.rs  mod.rs
src/infrastructure/notifications/: mod.rs
src/infrastructure/notificatons/: email_notification_service.rs
src/infrastructure/repositories/: file_content_repository.rs  mod.rs  mysql_content_repository.rs  sql_content_repository.rs  sqlite_content_repository.rs  sqlite_user_repository.rs
src/infrastructure/web/: user_controller.rs
src/queue/: mod.rs
src/scheduler/: mod.rs
src/setup/: http_server.rs  mod.rs  service_runner.rs  use_case_initializer.rs
src/storage/: mod.rs
src/test_utils/: common.rs  mod.rs
src/ui/: mod.rs
src/user/: mod.rs
tests/: end_to_end_test.rs  functional.rs  integration.rs  integration_test.rs  lib.rs  notification_system_integration_test.rs  repository.rs
tests/functional/: content_fetching_pipeline.rs  content_fetching_pipeline_test.rs  content_lifecycle.rs  content_lifecycle_test.rs  content_llm_analysis_pipeline.rs  content_llm_analysis_pipeline_test.rs
tests/integration/: error_log_integration_test.rs  file_storage_integration.rs  file_storage_integration_tests.rs  integration_test.rs  mod.rs  openai_content_analysis_integration.rs  openai_content_analysis_integration_test.rs  redis_queue_integration_test.rs  system_log_integration_test.rs
tests/repository/: mod.rs  mysql_content_repository_test.rs
(+77 files in other folders)
