[package]
name = "in4me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
rss = "2.0"
scraper ="0.19"
actix-web = "4.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
config = "0.14.0"
lazy_static = "1.4.0"
tempfile = "3.10.1"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
url = {version = "2.5.2", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
thiserror = "1.0.61"
murmur3 = "0.5.2"
fasthash = "0.4.0"
lock_api = "0.4.12"
once_cell = "1.19.0"
regex = "1.11.1"
urlencoding = "2.1.3"
lettre = { version = "0.11.17", features = ["smtp-transport", "pool", "hostname", "builder"] }
handlebars = "6.3.2"
sqlx = "0.8.6"

[dev-dependencies]
mockito = "1.7.0"
