[package]
name = "in4me"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rss = "2.0"
scraper ="0.23.1"
actix-web = "4.0"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
config = "0.15.11"
lazy_static = "1.4.0"
tempfile = "3.10.1"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
url = {version = "2.5.2", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
thiserror = "2"
murmur3 = "0.5.2"
fasthash = "0.4.0"
lock_api = "0.4.12"
once_cell = "1.19.0"
regex = "1.11.1"
urlencoding = "2.1.3"
lettre = { version = "0.11.17", features = ["smtp-transport", "pool", "hostname", "builder"] }
handlebars = "6.3.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "sqlite", "chrono", "uuid", "json"] }
sha2 = "0.10.9"
blake3 = "1.8.2"
toml = "0.8.23"
md5 = "0.7.0"
async-trait = "0.1.88"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"]}
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.31.0"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.0"
